# gtfs-tczew

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  ValidateGTFS.ipynb  api.py  configuration.py  distance.py  gtfs.py  gtfs_tczew.py  log.py  main.py  osm.py  pyproject.toml  requirements.in  requirements.txt  transportData.py  update-server.sh  validator.py
data/: GTFSConverter.py  GeoJSONSaver.py  OSMApi.py  OSMConverter.py  OSMOperatorMerger.py  OSMOverpass.py  OSMSource.py  TczewApi.py  TczewGTFSConverter.py  TczewTransportData.py  TransportData.py  Validator.py  geoJSONSaver.py  osmApi.py  osmOverpass.py  tczewTransportData.py  transportData.py
gtfs/: GTFSConverter.py  gtfsGenerator.py  gtfsTczew.py
source/: osmApi.py  osmOverpass.py  osmSource.py
tczew/: GTFSTczew.py  TczewGTFSConverter.py  TczewGTFSGenerator.py  TczewTransportData.py
tests/: TczewGTFSConverterTestCase.py  TczewTransportDataTestCase.py
