[project]
name = "gtfs-tczew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diskcache>=5.6.3",
    "geojson>=3.2.0",
    "httpx>=0.28.1",
    "overpy>=0.7",
    "pytz>=2025.2",
    "rich>=14.0.0",
    "starsep-utils>=0.8.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
